--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   },
   "dependencies": {
     "flowbite": "^2.2.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.6.1"
   }
 }
